tests/core/positive/primitives/int_bool_string.vais
F main() -> i64 {
    x: i64 := (1 + 2) * 3
    ok: bool := x == 9
    label: str := "core"
    I !ok { R 1 }
    I label != "core" { R 2 }
    R 0
}
