tests/core/negative/control/non_predicate_condition.vais
F main() -> i64 {
    I "bad" { R 1 } EL { R 0 }
}
